[metadata]
name = somepyprojects
version = 0.1
author = author
author_email = author@example.com
description = Some little python examples
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/discover02/somepyprojects
project_urls =
    GitHub Repository = https://github.com/discover02/somepyprojects
    Issue Tracker = https://github.com/discover02/somepyprojects/issues

[options]
package_dir =
    somepyprojects = src
packages = somepyprojects
include_package_data = True
