[metadata]
name = python-bin
version = 0.1
author = author
author_email = author@example.com
description = Some little python examples
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/discover02/python-bin
project_urls =
    GitHub Repository = https://github.com/discover02/python-bin
    Issue Tracker = https://github.com/discover02/python-bin/issues

[options]
package_dir =
    python-bin = src
packages = python-bin
include_package_data = True
